manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: parks
  labels:
    app.kubernetes.io/part-of: parks
    pod-security.kubernetes.io/enforce: restricted
    parksmap-discovery: "true"
