manifests/50-parksmap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap
  namespace: parks
  labels:
    app.kubernetes.io/name: parksmap
    app.kubernetes.io/part-of: parks
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector: { matchLabels: { app.kubernetes.io/name: parksmap } }
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parksmap
        app.kubernetes.io/part-of: parks
    spec:
      serviceAccountName: parksmap
      containers:
        - name: parksmap
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: Always
          ports:
            - { containerPort: 8080, name: http }
        
          
---
apiVersion: v1
kind: Service
metadata:
  name: parksmap
  namespace: parks
  labels:
    app.kubernetes.io/name: parksmap
spec:
  selector: { app.kubernetes.io/name: parksmap }
  ports: [{ name: http, port: 8080, targetPort: 8080 }]
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: parksmap
  namespace: parks
spec:
  to: { kind: Service, name: parksmap }
  port: { targetPort: http }
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
